Replace static index with base template

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,8 @@
 body {
-  color: #eee;
-  background: #202020;
+	color: #eee;
+	background: #202020;
+	margin: 5ch;
 }
 body a {
-  color: #809fff;
+	color: #809fff;
 }
