--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -9,16 +9,28 @@
 <h1>My Tickets</h1>
 
 <form>
-	<form hx-post="/api/login">
-		<div>
-			<label for="title">Title</label>
-			<input type="text" name="title" id="title" required />
-		</div>
-		<div>
-			<input type="submit" value="Create" />
-		</div>
-	</form>
+	<div>
+		<label for="title">Title</label>
+		<input type="text" name="title" id="title" />
+	</div>
+	<div>
+		<label for="description">description</label>
+		<input type="text" name="description" id="description" />
+	</div>
+	<button hx-post="/tickets" hx-target="#tickets" hx-swap="afterbegin" >Create</button>
 </form>
 
-{% call super() %}
+<div id="tickets">
+	{% for ticket in tickets %}
+    <div class="card">
+		<div class="card-header">{{ ticket.title }}</div>
+			<div class="card-body">
+				<p>Description: {{ ticket.description }}</p>
+				<p>ID: {{ticket.id}}</p>
+				<p>Status: {{ticket.status}}</p>
+			</div>
+		</div>
+	{% endfor %}
+	</ul>
+</div>
 {% endblock %}
