Added delete functionality

--- a/static/styles.css
+++ b/static/styles.css
@@ -25,6 +25,7 @@ body a {
   margin: 1px;
   padding: 1px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+  min-width: 350px;
 }
 
 .card-header {
