--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -28,6 +28,7 @@
 				<p>Description: {{ ticket.description }}</p>
 				<p>ID: {{ticket.id}}</p>
 				<p>Status: {{ticket.status}}</p>
+				<button hx-delete="/tickets/{{ticket.id}}" hx-target="closest .card" hx-swap="delete">Delete</button>
 			</div>
 		</div>
 	{% endfor %}
