--- a/templates/start.html
+++ b/templates/start.html
@@ -8,5 +8,5 @@
 {% block content %}
 <h1>Home</h1>
 <p>Hello, {{username}}!</p>
-<a href="/tickets">Tickets</a>
+<a href="/tickets" hx-boost="true">Tickets</a>
 {% endblock %}
