--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -5,7 +5,8 @@
 		<p>ID: {{ticket.id}}</p>
 		<p>Status: {{ticket.status}}</p>
 
-		<button class="delete-button" hx-delete="/tickets/{{ ticket.id }}" hx-target="closest .card" hx-swap="delete">
+		<button class="delete-button" hx-delete="/tickets/{{ ticket.id }}" hx-target="closest .card"
+			hx-confirm="Are you sure you want to delete this ticket?" hx-swap="delete">
 			Delete 🗑️
 		</button>
 	</div>
