--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -17,7 +17,7 @@
         <label for="description">Description</label>
         <input type="text" name="description" id="description" class="form-input" />
     </div>
-    <button class="create-button" hx-post="/tickets" hx-target="#tickets" hx-swap="afterbegin">Create</button>
+    <button class="create-button" hx-post="/tickets" hx-target="#tickets" hx-swap="beforeend">Create</button>
 </form>
 
 <div id="tickets">
@@ -28,7 +28,12 @@
 				<p>Description: {{ ticket.description }}</p>
 				<p>ID: {{ticket.id}}</p>
 				<p>Status: {{ticket.status}}</p>
-				<button class="delete-button" hx-delete="/tickets/{{ ticket.id }}" hx-target="closest .card" hx-swap="delete">
+				<button 
+					class="delete-button" 
+					hx-delete="/tickets/{{ ticket.id }}" 
+					hx-target="closest .card" 
+					hx-confirm="Are you sure you want to delete this ticket?"
+					hx-swap="delete">
             Delete 🗑️
 				</button>
 			</div>
