--- a/static/styles.css
+++ b/static/styles.css
@@ -17,6 +17,12 @@ body a {
     margin-top: 50px;
 }
 
+#login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .card {
     background-color: #222;
     color: #fff;
