--- a/static/styles.css
+++ b/static/styles.css
@@ -10,6 +10,14 @@ body a {
     color: #809fff;
 }
 
+input:invalid {
+  border: 2px dashed red;
+}
+
+.small-text {
+    font-size: 10px;
+}
+
 #content {
     display: flex;
     flex-direction: column;
