--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -4,6 +4,7 @@
 		<p>Description: {{ ticket.description }}</p>
 		<p>ID: {{ticket.id}}</p>
 		<p>Status: {{ticket.status}}</p>
+		<p class="small-text">Created by: {{ticket.creator_id}}</p>
 
 		<button class="delete-button" hx-delete="/tickets/{{ ticket.id }}" hx-target="closest .card"
 			hx-confirm="Are you sure you want to delete this ticket?" hx-swap="delete">
