--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -8,16 +8,16 @@
 {% block content %}
 <h1>My Tickets</h1>
 
-<form class="create-form">
+<form class="create-form" hx-post="/tickets" hx-target="#tickets" hx-swap="beforeend">
     <div class="form-group">
-        <label for="title">Title</label>
-        <input type="text" name="title" id="title" class="form-input" />
+        <label for="title">Title </label>
+        <input type="text" name="title" id="title" class="form-input" required />
     </div>
     <div class="form-group">
-        <label for="description">Description</label>
+        <label for="description">Description </label>
         <input type="text" name="description" id="description" class="form-input" />
     </div>
-    <button class="create-button" hx-post="/tickets" hx-target="#tickets" hx-swap="beforeend">Create</button>
+    <button class="create-button" >Create</button>
 </form>
 
 <div id="tickets">
@@ -28,6 +28,7 @@
 				<p>Description: {{ ticket.description }}</p>
 				<p>ID: {{ticket.id}}</p>
 				<p>Status: {{ticket.status}}</p>
+				<p class="small-text">Created by: {{ticket.creator_id}}</p>
 				<button 
 					class="delete-button" 
 					hx-delete="/tickets/{{ ticket.id }}" 
