Add user profile as modal

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="styles.css" rel="stylesheet" type="text/css">
 	<script src="https://unpkg.com/htmx.org@1.9.4"></script>
+	<script src="https://unpkg.com/hyperscript.org@0.9.11"></script>
 </head>
 
 <header hx-boost="true">
@@ -16,7 +17,6 @@
 </header>
 
 <body>
-	<div id="modal"> </div>
 	<div id="content" hx-boost="true">
 		{% block content %}<p>Placeholder content</p>{% endblock %}
 	</div>
