--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,1 +1,13 @@
-<h1>Profile: </h1>
+<div id="modal" _="on closeModal add .closing then wait for animationend then remove me">
+	<div class="modal-underlay" _="on click trigger closeModal"></div>
+	<div class="modal-content">
+		<span class="modal-close" _="on click trigger closeModal">×</span>
+		<div>
+			<h2>User Profile</h2>
+			<p>Username: Andres</p>
+			<p>User ID: 1</p>
+		</div>
+		<br>
+		<br>
+	</div>
+</div>
