--- a/templates/start.html
+++ b/templates/start.html
@@ -4,7 +4,7 @@
 
 {% block header %}
 <div class="header-left"> 
-  <h3>User: <a href="/profile">{{username}}</a> </h3>
+	<h3>Logged in: <a style="cursor:pointer"hx-target="body" hx-swap="beforeend" hx-get="/profile">{{username}}</a> </h3>
 </div>
 <div class="header-right">
    <a href="/tickets">Tickets</a>
