--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,8 +4,8 @@
 		<span class="modal-close" _="on click trigger closeModal">×</span>
 		<div>
 			<h2>User Profile</h2>
-			<p>Username: Andres</p>
-			<p>User ID: 1</p>
+			<p>Username: {{username}}</p>
+			<p>User ID: {{user_id}}</p>
 		</div>
 		<br>
 		<br>
