--- a/static/styles.css
+++ b/static/styles.css
@@ -10,6 +10,13 @@
   --text: #eee;
 }
 
+/* Transitions  */
+
+.fade-me-out.htmx-swapping {
+  opacity: 0;
+  transition: opacity 0.5s ease-out;
+}
+
 body {
     color: var(--text);
     background: var(--primary);
@@ -23,8 +30,32 @@ body {
     font: 112.5%/1.45 var(--font-display);
 }
 
+/* container */
+.responsive-three-column-grid {
+    display:block;
+}
+
+/* columns */
+.responsive-three-column-grid > * {
+    padding:1rem;
+}
+
+/* tablet breakpoint */
+@media (min-width:768px) {
+    .responsive-three-column-grid {
+        display: grid;
+        grid-auto-rows: 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
 body a {
     color: #809fff;
+}
+
+body p {
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 /* Apply a background color and styles for the header */
 .header {
@@ -61,7 +92,7 @@ body a {
 }
 
 input:invalid {
-  border: 2px dashed red;
+  border: 2px dashed coral;
 }
 
 .error {
@@ -100,16 +131,16 @@ input:invalid {
     color: var(--text);
     border-radius: 16px;
     margin: 10px;
-    padding: 5px;
-    border: 0.5px solid var(--text);
+    padding: 10px;
+    border: 1px solid dimgray;
     /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3); */
-    min-width: 350px;
+    min-width: 300px;
 }
 
 .card-header {
     font-size: 24px;
     font-weight: bold;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
     text-align: center;
     padding: 10px;
     background-color: var(--secondary);
@@ -122,6 +153,14 @@ input:invalid {
     /* border-top: 1px solid white; */
 }
 
+.arrow-button {
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+    margin-top: 0px;
+}
 .delete-button {
     background-color: #ff4d4f;
     color: white;
@@ -148,10 +187,10 @@ input:invalid {
 }
 
 .form-input {
-    width: 100%;
+    width: 90%;
     padding: 8px;
     border: 1px solid #ddd;
-    border-radius: 4px;
+    border-radius: 8px;
 }
 .dark-button {
     background-color: var(--primary);
