--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -2,13 +2,12 @@
 	<div class="card-header">{{ ticket.title }}</div>
 	<div class="card-body">
 		<p>Description: {{ ticket.description }}</p>
-		<p>ID: {{ticket.id}}</p>
 		<p>Status: {{ticket.status}}</p>
-		<p class="small-text">Created by: {{ticket.creator_id}}</p>
 
-		<button class="delete-button" hx-delete="/tickets/{{ ticket.id }}" hx-target="closest .card"
-			hx-confirm="Are you sure you want to delete this ticket?" hx-swap="delete">
-			Delete 🗑️
-		</button>
+		<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/doing" hx-target="#ticket-table"
+			hx-swap="innerHTML">➡️ </button>
+
+		<p class="small-text">Created by: {{ticket.creator_name}}</p>
+		<p class="small-text">ID: {{ticket.id}}</p>
 	</div>
 </div>
