--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -15,38 +15,7 @@
 {% block content %}
 <h1>My Tickets</h1>
 
-<form class="create-form" hx-post="/tickets" hx-target="#tickets" hx-swap="beforeend">
-    <div class="form-group">
-        <label for="title">Title </label>
-        <input type="text" name="title" id="title" class="form-input" required />
-    </div>
-    <div class="form-group">
-        <label for="description">Description </label>
-        <input type="text" name="description" id="description" class="form-input" />
-    </div>
-    <button class="create-button" >Create</button>
-</form>
-
-<div id="tickets">
-	{% for ticket in tickets %}
-    <div class="card">
-		<div class="card-header">{{ ticket.title }}</div>
-			<div class="card-body">
-				<p>Description: {{ ticket.description }}</p>
-				<p>ID: {{ticket.id}}</p>
-				<p>Status: {{ticket.status}}</p>
-				<p class="small-text">Created by: {{ticket.creator_id}}</p>
-				<button 
-					class="delete-button" 
-					hx-delete="/tickets/{{ ticket.id }}" 
-					hx-target="closest .card" 
-					hx-confirm="Are you sure you want to delete this ticket?"
-					hx-swap="delete">
-            Delete 🗑️
-				</button>
-			</div>
-		</div>
-	{% endfor %}
-	</ul>
+<div id="ticket-table" class="responsive-three-column-grid">
+		{% include "tickets_table.html" %}
 </div>
 {% endblock %}
