Add status in color

--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -2,7 +2,7 @@
 	<div class="card-header">{{ ticket.title }}</div>
 	<div class="card-body">
 		<p>Description: {{ ticket.description }}</p>
-		<p>Status: {{ticket.status}}</p>
+		<div class="status-indicator">{{ticket.status}}</div>
 
 		<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/doing" hx-target="#ticket-table"
 			hx-swap="innerHTML">➡️ </button>
