--- a/static/styles.css
+++ b/static/styles.css
@@ -152,7 +152,16 @@ input:invalid {
     padding: 10px;
     /* border-top: 1px solid white; */
 }
-
+.status-indicator {
+    background: #5686F5;
+    border-radius: 10px;
+    position: relative;
+    padding: 5px;
+    right: -200px;
+    top: 60px;
+    text-align: center;
+    max-width: 100px;
+}
 .arrow-button {
     border: none;
     border-radius: 4px;
