--- a/templates/tickets_table.html
+++ b/templates/tickets_table.html
@@ -7,7 +7,9 @@
 			<div class="card-header">{{ ticket.title }}</div>
 			<div class="card-body">
 				<p>Description: {{ ticket.description }}</p>
-				<p>Status: {{ticket.status}}</p>
+
+				<div class="status-indicator">{{ticket.status}}</div>
+				<!-- <p>Status: {{ticket.status}}</p> -->
 
 				<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/doing" hx-target="#ticket-table"
 					hx-swap="innerHTML">➡️ </button>
@@ -27,7 +29,9 @@
 				<div class="card-header">{{ ticket.title }}</div>
 				<div class="card-body">
 					<p>Description: {{ ticket.description }}</p>
-					<p>Status: {{ticket.status}}</p>
+
+					<div class="status-indicator">{{ticket.status}}</div>
+					<!-- <p>Status: {{ticket.status}}</p> -->
 
 					<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/todo" hx-target="#ticket-table"
 						hx-swap="innerHTML">⬅️ </button>
@@ -48,7 +52,8 @@
 				<div class="card-header">{{ ticket.title }}</div>
 				<div class="card-body">
 					<p>Description: {{ ticket.description }}</p>
-					<p>Status: {{ticket.status}}</p>
+
+					<div class="status-indicator">{{ticket.status}}</div>
 
 					<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/doing" hx-target="#ticket-table"
 						hx-swap="innerHTML">⬅️ </button>
