--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,6 +6,7 @@
 			<h2>User Profile</h2>
 			<p>Username: {{username}}</p>
 			<p>User ID: {{user_id}}</p>
+			<a href="/logout">Logout</a>
 		</div>
 		<br>
 		<br>
