--- a/static/styles.css
+++ b/static/styles.css
@@ -30,6 +30,12 @@ body {
     font: 112.5%/1.45 var(--font-display);
 }
 
+.rowlike-table {
+    display: flex;
+    width: 95%;
+    flex-direction: column;
+}
+
 /* container */
 .responsive-three-column-grid {
     display:block;
@@ -126,6 +132,17 @@ input:invalid {
     align-items: center;
 }
 
+.list-item {
+    background-color: var(--secondary);
+    color: var(--text);
+    border-radius: 6px;
+    margin: 10px;
+    padding: 10px;
+    /* border: 1px solid dimgray; */
+    /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3); */
+    min-width: 300px;
+    position: relative;
+}
 .card {
     background-color: var(--secondary);
     color: var(--text);
@@ -166,9 +183,23 @@ input:invalid {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 26px;
     transition: background-color 0.3s ease;
     margin-top: 0px;
+    background: transparent;
+}
+
+.arrow-button-list {
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 26px;
+    transition: background-color 0.3s ease;
+    margin-top: 0px;
+    position: absolute;
+    right: 0;
+    line-height: 100%;
+    background: transparent;
 }
 .delete-button {
     background-color: #ff4d4f;
