--- a/templates/ticket_card.html
+++ b/templates/ticket_card.html
@@ -1,7 +1,7 @@
 <div class="card">
 	<div class="card-header">{{ ticket.title }}</div>
 	<div class="card-body">
-		<p>Description: {{ ticket.description }}</p>
+		<p>{{ ticket.description }}</p>
 		<div class="status-indicator">{{ticket.status}}</div>
 
 		<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/doing" hx-target="#ticket-table"
