--- a/templates/tickets_table.html
+++ b/templates/tickets_table.html
@@ -1,30 +1,10 @@
-<div>
-	<h3>To Do <button hx-get="/tickets/new" hx-target="#tickets" hx-swap="afterbegin" class="arrow-button"> ➕ </button>
-	</h3>
-	<div id="tickets">
-		{% for ticket in tickets_todo %}
-		<div class="card">
-			<div class="card-header">{{ ticket.title }}</div>
-			<div class="card-body">
-				<p>Description: {{ ticket.description }}</p>
-
-				<div class="status-indicator">{{ticket.status}}</div>
-				<!-- <p>Status: {{ticket.status}}</p> -->
-
-				<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/doing" hx-target="#ticket-table"
-					hx-swap="innerHTML">➡️ </button>
-
-				<p class="small-text">Created by: {{ticket.creator_name}}</p>
-				<p class="small-text">ID: {{ticket.id}}</p>
-			</div>
-		</div>
-		{% endfor %}
-	</div>
-</div>
-<div>
-	<h3>Doing</h1>
-		<div id="tickets-doing">
-			{% for ticket in tickets_doing %}
+<div id="ticket-table" class="responsive-three-column-grid">
+	<div>
+		<h3>To Do <button hx-get="/tickets/new" hx-target="#tickets" hx-swap="afterbegin" class="arrow-button"> ➕
+			</button>
+		</h3>
+		<div id="tickets">
+			{% for ticket in tickets_todo %}
 			<div class="card">
 				<div class="card-header">{{ ticket.title }}</div>
 				<div class="card-body">
@@ -33,39 +13,63 @@
 					<div class="status-indicator">{{ticket.status}}</div>
 					<!-- <p>Status: {{ticket.status}}</p> -->
 
-					<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/todo" hx-target="#ticket-table"
-						hx-swap="innerHTML">⬅️ </button>
-					<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/done" hx-target="#ticket-table"
-						hx-swap="innerHTML">➡️ </button>
-					<p class="small-text">Created by: {{ticket.creator_name}}</p>
-					<p class="small-text">ID: {{ticket.id}}</p>
-				</div>
-			</div>
-			{% endfor %}
-		</div>
-</div>
-<div>
-	<h3>Done</h1>
-		<div id="tickets-done">
-			{% for ticket in tickets_done %}
-			<div class="card">
-				<div class="card-header">{{ ticket.title }}</div>
-				<div class="card-body">
-					<p>Description: {{ ticket.description }}</p>
-
-					<div class="status-indicator">{{ticket.status}}</div>
-
 					<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/doing" hx-target="#ticket-table"
-						hx-swap="innerHTML">⬅️ </button>
+						hx-swap="innerHTML">➡️ </button>
 
 					<p class="small-text">Created by: {{ticket.creator_name}}</p>
 					<p class="small-text">ID: {{ticket.id}}</p>
-					<button class="delete-button" hx-delete="/tickets/{{ ticket.id }}" hx-target="closest .card"
-						hx-confirm="Are you sure you want to delete this ticket?" hx-swap="delete">
-						Delete 🗑️
-					</button>
 				</div>
 			</div>
 			{% endfor %}
 		</div>
+	</div>
+	<div>
+		<h3>Doing</h1>
+			<div id="tickets-doing">
+				{% for ticket in tickets_doing %}
+				<div class="card">
+					<div class="card-header">{{ ticket.title }}</div>
+					<div class="card-body">
+						<p>Description: {{ ticket.description }}</p>
+
+						<div class="status-indicator">{{ticket.status}}</div>
+						<!-- <p>Status: {{ticket.status}}</p> -->
+
+						<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/todo" hx-target="#ticket-table"
+							hx-swap="innerHTML">⬅️ </button>
+						<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/done" hx-target="#ticket-table"
+							hx-swap="innerHTML">➡️ </button>
+						<p class="small-text">Created by: {{ticket.creator_name}}</p>
+						<p class="small-text">ID: {{ticket.id}}</p>
+					</div>
+				</div>
+				{% endfor %}
+			</div>
+	</div>
+	<div>
+		<h3>Done</h1>
+			<div id="tickets-done">
+				{% for ticket in tickets_done %}
+				<div class="card">
+					<div class="card-header">{{ ticket.title }}</div>
+					<div class="card-body">
+						<p>Description: {{ ticket.description }}</p>
+
+						<div class="status-indicator">{{ticket.status}}</div>
+
+						<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/doing" hx-target="#ticket-table"
+							hx-swap="innerHTML">⬅️ </button>
+
+						<p class="small-text">Created by: {{ticket.creator_name}}</p>
+						<p class="small-text">ID: {{ticket.id}}</p>
+						<button class="delete-button" hx-delete="/tickets/{{ ticket.id }}" hx-target="closest .card"
+							hx-confirm="Are you sure you want to delete this ticket?" hx-swap="delete">
+							Delete 🗑️
+						</button>
+					</div>
+				</div>
+				{% endfor %}
+			</div>
+	</div>
+
 </div>
