--- a/templates/tickets_table.html
+++ b/templates/tickets_table.html
@@ -38,7 +38,7 @@
 						<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/todo" hx-target="#ticket-table"
 							hx-swap="innerHTML">⬅️ </button>
 						<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/done" hx-target="#ticket-table"
-							hx-swap="innerHTML">➡️ </button>
+							hx-swap="innerHTML">☑️ </button>
 						<p class="small-text">Created by: {{ticket.creator_name}}</p>
 						<p class="small-text">ID: {{ticket.id}}</p>
 					</div>
