--- a/templates/tickets_table.html
+++ b/templates/tickets_table.html
@@ -1,8 +1,13 @@
 <div id="ticket-table" class="responsive-three-column-grid">
 	<div>
-		<h3>To Do <button hx-get="/tickets/new" hx-target="#tickets" hx-swap="afterbegin" class="arrow-button"> ➕
+
+		{% let len = tickets_todo.len() %}
+		<div class="inline">
+			<h3 class="inline">to-do</h3>
+			<p class="inline"> {{ len }} </p>
+			<button hx-get="/tickets/new" hx-target="#tickets" hx-swap="afterbegin" class="arrow-button"> ➕
 			</button>
-		</h3>
+		</div>
 		<div id="tickets">
 			{% for ticket in tickets_todo %}
 			<div class="card">
@@ -24,52 +29,60 @@
 		</div>
 	</div>
 	<div>
-		<h3>Doing</h1>
-			<div id="tickets-doing">
-				{% for ticket in tickets_doing %}
-				<div class="card">
-					<div class="card-header">{{ ticket.title }}</div>
-					<div class="card-body">
-						<p>Description: {{ ticket.description }}</p>
+		{% let len_doing = tickets_doing.len() %}
+		<div class="inline">
+			<h3 class="inline">doing</h3>
+			<p class="inline"> {{ len_doing }} </p>
+		</div>
+		<div id="tickets-doing">
+			{% for ticket in tickets_doing %}
+			<div class="card">
+				<div class="card-header">{{ ticket.title }}</div>
+				<div class="card-body">
+					<p>Description: {{ ticket.description }}</p>
 
-						<div class="status-indicator">{{ticket.status}}</div>
-						<!-- <p>Status: {{ticket.status}}</p> -->
+					<div class="status-indicator">{{ticket.status}}</div>
+					<!-- <p>Status: {{ticket.status}}</p> -->
 
-						<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/todo" hx-target="#ticket-table"
-							hx-swap="innerHTML">⬅️ </button>
-						<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/done" hx-target="#ticket-table"
-							hx-swap="innerHTML">☑️ </button>
-						<p class="small-text">Created by: {{ticket.creator_name}}</p>
-						<p class="small-text">ID: {{ticket.id}}</p>
-					</div>
+					<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/todo" hx-target="#ticket-table"
+						hx-swap="innerHTML">⬅️ </button>
+					<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/done" hx-target="#ticket-table"
+						hx-swap="innerHTML">☑️ </button>
+					<p class="small-text">Created by: {{ticket.creator_name}}</p>
+					<p class="small-text">ID: {{ticket.id}}</p>
 				</div>
-				{% endfor %}
 			</div>
+			{% endfor %}
+		</div>
 	</div>
 	<div>
-		<h3>Done</h1>
-			<div id="tickets-done">
-				{% for ticket in tickets_done %}
-				<div class="card">
-					<div class="card-header">{{ ticket.title }}</div>
-					<div class="card-body">
-						<p>Description: {{ ticket.description }}</p>
+		{% let len_done = tickets_done.len() %}
+		<div class="inline">
+			<h3 class="inline">done</h3>
+			<p class="inline"> {{ len_done }} </p>
+		</div>
+		<div id="tickets-done">
+			{% for ticket in tickets_done %}
+			<div class="card">
+				<div class="card-header">{{ ticket.title }}</div>
+				<div class="card-body">
+					<p>Description: {{ ticket.description }}</p>
 
-						<div class="status-indicator">{{ticket.status}}</div>
+					<div class="status-indicator">{{ticket.status}}</div>
 
-						<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/doing" hx-target="#ticket-table"
-							hx-swap="innerHTML">⬅️ </button>
+					<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/doing" hx-target="#ticket-table"
+						hx-swap="innerHTML">⬅️ </button>
 
-						<p class="small-text">Created by: {{ticket.creator_name}}</p>
-						<p class="small-text">ID: {{ticket.id}}</p>
-						<button class="delete-button" hx-delete="/tickets/{{ ticket.id }}" hx-target="closest .card"
-							hx-confirm="Are you sure you want to delete this ticket?" hx-swap="delete">
-							Delete 🗑️
-						</button>
-					</div>
+					<p class="small-text">Created by: {{ticket.creator_name}}</p>
+					<p class="small-text">ID: {{ticket.id}}</p>
+					<button class="delete-button" hx-delete="/tickets/{{ ticket.id }}" hx-target="closest .card"
+						hx-confirm="Are you sure you want to delete this ticket?" hx-swap="delete">
+						Delete 🗑️
+					</button>
 				</div>
-				{% endfor %}
 			</div>
+			{% endfor %}
+		</div>
 	</div>
 
 </div>
