Fix bug div was created inside div like a russian doll

--- a/templates/tickets_table.html
+++ b/templates/tickets_table.html
@@ -19,7 +19,7 @@
 					<!-- <p>Status: {{ticket.status}}</p> -->
 
 					<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/doing" hx-target="#ticket-table"
-						hx-swap="innerHTML">➡️ </button>
+						hx-swap="outerHTML">➡️ </button>
 
 					<p class="small-text">Created by: {{ticket.creator_name}}</p>
 					<p class="small-text">ID: {{ticket.id}}</p>
@@ -45,9 +45,9 @@
 					<!-- <p>Status: {{ticket.status}}</p> -->
 
 					<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/todo" hx-target="#ticket-table"
-						hx-swap="innerHTML">⬅️ </button>
+						hx-swap="outerHTML">⬅️ </button>
 					<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/done" hx-target="#ticket-table"
-						hx-swap="innerHTML">☑️ </button>
+						hx-swap="outerHTML">☑️ </button>
 					<p class="small-text">Created by: {{ticket.creator_name}}</p>
 					<p class="small-text">ID: {{ticket.id}}</p>
 				</div>
@@ -71,7 +71,7 @@
 					<div class="status-indicator">{{ticket.status}}</div>
 
 					<button class="arrow-button" hx-put="/tickets/{{ticket.id}}/doing" hx-target="#ticket-table"
-						hx-swap="innerHTML">⬅️ </button>
+						hx-swap="outerHTML">⬅️ </button>
 
 					<p class="small-text">Created by: {{ticket.creator_name}}</p>
 					<p class="small-text">ID: {{ticket.id}}</p>
