--- a/static/styles.css
+++ b/static/styles.css
@@ -188,11 +188,14 @@ input:invalid {
     background: #5686F5;
     border-radius: 10px;
     position: relative;
-    padding: 5px;
-    right: -200px;
-    top: 60px;
+    padding: 7px;
+    right: -225px;
+    top: -79px;
     text-align: center;
     max-width: 100px;
+    border: none;
+    cursor: pointer;
+    color: var(--text);
 }
 .arrow-button {
     border: none;
