--- a/templates/tickets_list.html
+++ b/templates/tickets_list.html
@@ -6,8 +6,8 @@
 	</div>
 	<div id="todo-list">
 		{% for ticket in tickets_todo %}
-		<div class="list-item">
-			{{ ticket.title }}
+		<div class="list-item-parent">
+			<p>{{ ticket.title }}</p>
 
 			<select class="status-indicator-list" name="status" id="status" hx-put="/tickets/{{ticket.id}}"
 				hx-target="#ticket-list" hx-swap="outerHTML">
@@ -29,8 +29,8 @@
 
 	<div id="doing-list">
 		{% for ticket in tickets_doing %}
-		<div class="list-item">
-			{{ ticket.title }}
+		<div class="list-item-parent">
+			<p>{{ ticket.title }}</p>
 
 			<select class="status-indicator-list" name="status" id="status" hx-put="/tickets/{{ticket.id}}"
 				hx-target="#ticket-list" hx-swap="outerHTML">
@@ -50,8 +50,8 @@
 	</div>
 	<div id="doing-list">
 		{% for ticket in tickets_done %}
-		<div class="list-item">
-			{{ ticket.title }}
+		<div class="list-item-parent">
+			<p>{{ ticket.title }}</p>
 
 			<select class="status-indicator-list" name="status" id="status" hx-put="/tickets/{{ticket.id}}"
 				hx-target="#ticket-list" hx-swap="outerHTML">
