--- a/static/styles.css
+++ b/static/styles.css
@@ -185,6 +185,10 @@ input:invalid {
     align-items: center;
 }
 
+.clickable {
+    cursor: pointer;
+}
+
 .list-item-parent {
     background-color: var(--secondary);
     color: var(--text);
@@ -195,6 +199,7 @@ input:invalid {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.2);
 }
 .list-item {
     flex: 1;
@@ -214,7 +219,7 @@ input:invalid {
     font-size: 24px;
     font-weight: bold;
     /* margin-bottom: 10px; */
-    text-align: center;
+    text-align: left;
     padding: 10px;
     background-color: var(--secondary);
 }
@@ -231,9 +236,9 @@ input:invalid {
     transition: background-color 0.3s ease;
     border-radius: 10px;
     position: absolute;
-    padding: 7px;
-    right: 0px;
-    top: 0px;
+    padding: 9px;
+    right: 0;
+    top: -55px;
     text-align: center;
     max-width: 100px;
     border: none;
